@@ -45,7 +45,7 @@ TestBase::init_topic(const char*& /*name*/,
 int
 TestBase::run(int& argc, ACE_TCHAR* argv[])
 {
-  DDS::DomainParticipantFactory_var dpf = 
+  DDS::DomainParticipantFactory_var dpf =
       TheParticipantFactoryWithArgs(argc, argv);
 
   int error(0);
